Popup invoice form and corrected spacing when generating invoice

--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,25 @@ tfoot td {
   z-index: 10;
 }
 
+#invoice-popup {
+  display: none;
+  max-height: 90vh;
+  max-width: fit-content;
+  min-height: fit-content;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  backdrop-filter: blur(3px) saturate(100%) contrast(45%) brightness(130%);
+  border-radius: 15px;
+  box-shadow: 0 0 1rem 0 rgba(0 0 0 / 20%);
+  padding: 3% 3% 2%;
+  position: fixed;
+  bottom: 0;
+  right: 15px;
+  border: 3px solid var(--dark-color);
+  z-index: 10;
+}
+
 #close-button {
   position: absolute;
   top: 2%;
@@ -325,10 +344,26 @@ tfoot td {
   background-color: transparent;
   font-size: 2.5em;
   cursor: pointer;
-  color: white;
+  color: var(--dark-color);
 }
 
 #close-button:hover {
+  transform: scale(1.2);
+}
+
+#invoice-close-button {
+  position: absolute;
+  top: 2%;
+  right: 5%;
+  width: fit-content;
+  border: none;
+  background-color: transparent;
+  font-size: 2.5em;
+  cursor: pointer;
+  color: var(--dark-color);
+}
+
+#invoice-close-button:hover {
   transform: scale(1.2);
 }
 
